partman-auto (72) UNRELEASED; urgency=low

  * Revert support for erasing encrypted LVM volumes introduced in (69).
    There are too many problems with it and starting fresh seems better than
    stacking change on change to fix it. Closes: #425829.

 -- Frans Pop <fjp@debian.org>  Tue, 04 Dec 2007 11:38:09 +0100

partman-auto (71) unstable; urgency=low

  * Fix regression preventing to exit to main menu when using go back from
    initial guided partitioning screen. Closes: #446994.

 -- Frans Pop <fjp@debian.org>  Thu, 15 Nov 2007 12:28:20 +0100

partman-auto (70) unstable; urgency=low

  [ Frans Pop ]
  * Move deletion of SVN directories to install-rc script.
  * Improve the way install-rc is called.

  [ Colin Watson ]
  * Fix divide-by-zero error if the sum of the factors in the scheme is
    equal to the sum of the minimum sizes, or if we run off the maximum size
    of the recipe before we run out of disk to allocate.
  * Minor optimisations using ${parameter:-word} and ${parameter:+word}
    expansions.
  * Use 'mkdir -p' rather than more awkward test-then-create constructions.

  [ Anton Zinoviev ]
  * Rename auto.d to display.d.  Be more careful with the exit code of the
    script in display.d and when to remove /var/lib/partman/initial_auto.

  [ Updated translations ]
  * Bengali (bn.po) by Jamil Ahmed
  * Catalan (ca.po) by Jordi Mallach
  * Czech (cs.po) by Miroslav Kure
  * Danish (da.po) by Claus Hindsgaul
  * German (de.po) by Jens Seidel
  * Esperanto (eo.po) by Serge Leblanc
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Basque (eu.po) by Piarres Beobide
  * Hungarian (hu.po) by SZERVÁC Attila
  * Italian (it.po) by Stefano Canepa
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Nepali (ne.po) by Nabin Gautam
  * Norwegian Nynorsk (nn.po) by Håvard Korsvoll
  * Punjabi (Gurmukhi) (pa.po) by A S Alam
  * Polish (pl.po) by Bartosz Fenski
  * Portuguese (pt.po) by Miguel Figueiredo
  * Romanian (ro.po) by Eddy Petrișor